Bug 362234 - from frameworks, Configure Okular, cannot reach buttons
Summary: from frameworks, Configure Okular, cannot reach buttons
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-25 12:10 UTC by Olivier Churlaud
Modified: 2016-07-18 13:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The validation buttons are unreachable (90.70 KB, image/png)
2016-04-25 12:11 UTC, Olivier Churlaud
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Olivier Churlaud 2016-04-25 12:10:20 UTC
I built okular from git, framework branch. 

okular 1.0.0
Qt: 5.6.0
KDE Frameworks: 5.21.0

I cannot reach the Cancel/Ok/.. buttons. They are bellow my screen. I'll upload an picture to show what I mean. 

Maybe it's a bug in frameworks, then please move it to the right place. Thx.

Reproducible: Always
Comment 1 Olivier Churlaud 2016-04-25 12:11:08 UTC
Created attachment 98584 [details]
The validation buttons are unreachable
Comment 2 Olivier Churlaud 2016-04-25 12:11:56 UTC
I have quite the same in Konversation: It must be a bug on the Frameworks side
Comment 3 Olivier Churlaud 2016-07-18 13:49:00 UTC
Git commit 574abcd05ece484da77635e2b8f23d3f4c1af5dd by Olivier CHURLAUD.
Committed on 18/07/2016 at 13:41.
Pushed by ochurlaud into branch 'master'.

The config page hs now scroll bars when needed.
REVIEW: 128464

M  +16   -1    src/kconfigdialog.cpp

http://commits.kde.org/kconfigwidgets/574abcd05ece484da77635e2b8f23d3f4c1af5dd