The config page hs now scroll bars when needed.

BUG: 362234
REVIEW: 128464